issues with Ace

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <nav>Wikinimous <%= link_to "Add an article", new_article_path %></nav>
     <%= yield %>
   </body>
 </html>
